# rabbitmq-python

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: learn-rabbitmq-PRD.md
scripts/step1_basic/: producer.py  worker_marketing.py  worker_register.py
scripts/step2_enhanced/: producer.py  worker.py
scripts/step3_complete/: producer.py  setup_retry.py  worker.py
src/app/: main.py
src/app/api/: router.py
src/app/api/endpoints/: mail.py
src/app/core/: config.py  logging.py
src/app/models/: schemas.py
src/app/rabbitmq/: connection.py  consumer.py  exchange.py  publisher.py
src/app/services/: mail_sender.py  task_store.py
tests/: conftest.py  test_consumer.py  test_publisher.py
